cmake_minimum_required(VERSION 3.0)


PROJECT( ROBOTINO_API2 )



SET( ROBOTINO_API2_VERSION 1.1.7 CACHE STRING "Robotino API2 Version" FORCE )
STRING( REGEX MATCHALL [0-9]+ VERSION_SPLIT ${ROBOTINO_API2_VERSION} )
LIST( GET VERSION_SPLIT 0 ROBOTINO_API2_MAJOR )
LIST( GET VERSION_SPLIT 1 ROBOTINO_API2_MINOR )
LIST( GET VERSION_SPLIT 2 ROBOTINO_API2_PATCH )
MESSAGE("ROBOTINO_API2_MAJOR:${ROBOTINO_API2_MAJOR}")
MESSAGE("ROBOTINO_API2_MINOR:${ROBOTINO_API2_MINOR}")
MESSAGE("ROBOTINO_API2_PATCH:${ROBOTINO_API2_PATCH}")



IF( CMAKE_SIZEOF_VOID_P EQUAL 8 )
	PROJECT( ROBOTINO_API2_x64 )
	SET( ARCHITECTURE amd64 )
ELSE( CMAKE_SIZEOF_VOID_P EQUAL 8 )
	SET( ARCHITECTURE i386 )
ENDIF( CMAKE_SIZEOF_VOID_P EQUAL 8 )
MESSAGE("ARCHITECTURE:${ARCHITECTURE}")


OPTION(USE_SYSTEM_QT "Link dynamically with Qt found on your system" ON)



SET( ROBOTINO_API2_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" )
SET( ROBOTINO_API2_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}" )
SET( EXTERNAL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/external" )
MESSAGE("ROBOTINO_API2_SOURCE_DIR:${ROBOTINO_API2_SOURCE_DIR}")
MESSAGE("ROBOTINO_API2_BINARY_DIR:${ROBOTINO_API2_BINARY_DIR}")
MESSAGE("EXTERNAL_DIR:${EXTERNAL_DIR}")



SET(
	CMAKE_MODULE_PATH
	${CMAKE_CURRENT_SOURCE_DIR}/cmake
	${CMAKE_CURRENT_SOURCE_DIR}/cmake/common
	${CMAKE_CURRENT_SOURCE_DIR}/cmake/common/external
	${EXTERNAL_DIR}/qt_4_7_4_static_robotino_api2_qt/cmake
	${EXTERNAL_DIR}/doxygen
)
MESSAGE("CMAKE_MODULE_PATH:${CMAKE_MODULE_PATH}")



FIND_FILE(DOXYGEN_CFG NAMES doxygen.cfg.in PATHS "${EXTERNAL_DIR}/doxygen" NO_DEFAULT_PATH)
MESSAGE("DOXYGEN_CFG:${DOXYGEN_CFG}")



SET( CMAKE_CXX_FLAGS_RELEASE "/MD /O2 /Ob2 /D NDEBUG /Zi /Oy- /DEBUG " CACHE STRING "Flags used by the compiler during Release builds." FORCE )
SET( CMAKE_C_FLAGS_RELEASE "/MD /O2 /Ob2 /D NDEBUG /Zi /Oy- /DEBUG " CACHE STRING "Flags used by the compiler during Release builds." FORCE )
SET( CMAKE_CXX_FLAGS_RELWITHDEBINFO "/MD /O2 /Ob2 /D NDEBUG /Zi /Oy- /DEBUG " CACHE STRING "Flags used by the compiler during Release builds." FORCE )
SET( CMAKE_EXE_LINKER_FLAGS_RELEASE "/debug /INCREMENTAL" CACHE STRING "Flags used by the linker during Release builds." FORCE )
SET( CMAKE_MODULE_LINKER_FLAGS_RELEASE "/debug /INCREMENTAL" CACHE STRING "Flags used by the linker during Release builds." FORCE )
SET( CMAKE_SHARED_LINKER_FLAGS_RELEASE "/debug /INCREMENTAL" CACHE STRING "Flags used by the linker during Release builds." FORCE )


INCLUDE( GenerateVersion )

SET(GLOBAL_TARGET_DIR ${ROBOTINO_API2_BINARY_DIR}/target)
FILE( MAKE_DIRECTORY ${GLOBAL_TARGET_DIR} )
FILE( MAKE_DIRECTORY ${GLOBAL_TARGET_DIR}/debug )
FILE( MAKE_DIRECTORY ${GLOBAL_TARGET_DIR}/release )

IF(USE_SYSTEM_QT)
	MESSAGE("USE_SYSTEM_QT")
	SET( QT_USE_QTGUI 0 )
	SET( QT_USE_QTNETWORK 1 )
	SET( QT_USE_QTXML 1 )
	INCLUDE( MyQt )
	MESSAGE("MyQt:${MyQt}")
	 
	SET(RECRPC_DIR "C:\\Users\\petru\\Desktop\\install\\rec_rpc")
	IF( NOT RECRPC_DIR )
		STRING( REPLACE "robotino_api2" "rec_rpc" RECRPC_DIR "${CMAKE_CURRENT_BINARY_DIR}/install" )
	ENDIF( NOT RECRPC_DIR )
	MESSAGE("RECRPC_DIR:${RECRPC_DIR}")

	SET(ROBOTINOCOMMON_DIR "C:\\Users\\petru\\Desktop\\install\\common")

	IF( NOT ROBOTINOCOMMON_DIR )
		STRING( REPLACE "robotino_api2" "robotino_common" ROBOTINOCOMMON_DIR "${CMAKE_CURRENT_BINARY_DIR}/install" )
	ENDIF( NOT ROBOTINOCOMMON_DIR )
	MESSAGE("ROBOTINOCOMMON_DIR:${ROBOTINOCOMMON_DIR}")

	#SET(RECRPC_DIR "C:\\Users\\petru\\Desktop\\source\\rec_rpc")
	
	SET(CMAKE_MODULE_PATH ${RECRPC_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/common)
	MESSAGE("CMAKE_MODULE_PATH:${CMAKE_MODULE_PATH}")
	find_package( RecRpc REQUIRED )
	INCLUDE_DIRECTORIES( ${REC_RPC_INCLUDES})
	
	find_package( RobotinoCommon REQUIRED )
	INCLUDE_DIRECTORIES( ${ROBOTINOCOMMON_INCLUDE_DIR} )
ELSE()
	find_package( MyQt4Static )
	find_package( MyQt4StaticHelpers REQUIRED )
	ADD_DEFINITIONS( -DQT_VERSION_4 )
	
	SET( REC_RPC_STATIC 1 )
	ADD_DEFINITIONS( -DREC_RPC_STATIC )
	SET( REC_RPC_LIBRARY rec_rpc )

	SET( REC_ROBOTINO_RPC_STATIC 1 )
	ADD_DEFINITIONS( -DREC_ROBOTINO_RPC_STATIC )
	SET( REC_ROBOTINO_RPC_LIBRARY rec_robotino_rpc )
ENDIF()



SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_DEBUG QT_DEBUG)
SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_RELEASE QT_NO_DEBUG)
SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_RELEASE QT_NO_DEBUG_OUTPUT )
SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_RELEASE QT_NO_WARNING_OUTPUT )
SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_RELWITHDEBINFO QT_NO_DEBUG)
SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_MINSIZEREL QT_NO_DEBUG)
SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_MINSIZEREL QT_NO_DEBUG_OUTPUT )
SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_MINSIZEREL QT_NO_WARNING_OUTPUT )

INCLUDE_DIRECTORIES( ${QT_STATIC_INCLUDE_DIR} ${QT_STATIC_QTCORE_INCLUDE_DIR} ${QT_STATIC_QTXML_INCLUDE_DIR} ${QT_STATIC_QTNETWORK_INCLUDE_DIR} )
ADD_DEFINITIONS(${QT_STATIC_DEFINITIONS})


find_package( Doxygen REQUIRED )
MESSAGE("after find_package(doxygen)")

SET( CMAKE_DEBUG_POSTFIX	"d" )
STRING( REPLACE "\\" "/" ProgramFiles "$ENV{ProgramFiles}" )

SET( CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/install/" )
ADD_DEFINITIONS( -D_CRT_SECURE_NO_DEPRECATE -DWIN32_LEAN_AND_MEAN )
SET( CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE}   /GL /D _SECURE_SCL=0" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL /D _SECURE_SCL=0" )
SET( CMAKE_EXE_LINKER_FLAGS_RELEASE    "${CMAKE_EXE_LINKER_FLAGS_RELEASE}    /LTCG" )
SET( CMAKE_MODULE_LINKER_FLAGS_RELEASE "${CMAKE_MODULE_LINKER_FLAGS_RELEASE} /LTCG" )
SET( CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /LTCG" )
  
SET( BIN_INSTALL_DIR bin )
SET( LIB_INSTALL_DIR lib )
	
SET( LIBRARY_OUTPUT_PATH ${GLOBAL_TARGET_DIR} )
    
SET( EXECUTABLE_OUTPUT_PATH ${GLOBAL_TARGET_DIR} )
MESSAGE("Before INCLUDE_DIRECTORIES")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib)
MESSAGE("After INCLUDE_DIRECTORIES")

ADD_DEFINITIONS( -DUNICODE -D_UNICODE )


ADD_SUBDIRECTORY( lib )
MESSAGE("After add lib")
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cmake/FindRobotinoAPI2.cmake DESTINATION cmake)

MESSAGE("After add lib")
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/api2.pri DESTINATION . )

MESSAGE("After add lib\n")
FILE( GLOB REC_ROBOTINO_API2_PDBS "${GLOBAL_TARGET_DIR}/release/*.pdb" )
MESSAGE( "${REC_ROBOTINO_API2_PDBS}" )
INSTALL(FILES ${REC_ROBOTINO_API2_PDBS} DESTINATION bin)

INSTALL(FILES CHANGELOG.txt DESTINATION .)

SET( CHANGELOG_NAME CHANGELOG_ROBOTINO_API2.txt )
SET( CHANGELOG_FILE "${CMAKE_CURRENT_BINARY_DIR}/${CHANGELOG_NAME}" )
CONFIGURE_FILE( "${CMAKE_CURRENT_SOURCE_DIR}/CHANGELOG.txt" "${CHANGELOG_FILE}" COPYONLY )

SET( PACKAGE_NAME robotino-api2 )
SET( PACKAGE_VERSION ${ROBOTINO_API2_VERSION} )
INCLUDE( CreateInstaller )
	
IF( INNOSETUP_FOUND )
	FILE( WRITE ${CMAKE_CURRENT_BINARY_DIR}/CreateInstaller.cmake 
		"
STRING( REPLACE \"robotino_api2\" \"robotino_examples\" EXAMPLES_INSTALL_DIR \"${CMAKE_CURRENT_BINARY_DIR}/install\" )
STRING( REPLACE \"robotino_api2\" \"robotino_api2_wrapper\" WRAPPER_INSTALL_DIR \"${CMAKE_CURRENT_BINARY_DIR}/install\" )
FIND_PATH( MATLAB_DIR name \"startup.m\" PATHS \"${CMAKE_CURRENT_SOURCE_DIR}/../matlab\" )
#MESSAGE( \"\${EXAMPLES_INSTALL_DIR}\" )
FIND_FILE( EXAMPLES_CIRCLE example_circle.exe PATHS \"\${EXAMPLES_INSTALL_DIR}/bin\" NO_DEFAULT_PATH )
FIND_FILE( DOTNET_WRAPPER_DLL rec_robotino_api2_dotnet.dll PATHS \"\${WRAPPER_INSTALL_DIR}/bin\" NO_DEFAULT_PATH )
FIND_FILE( JAVA_WRAPPER_DLL rec_robotino_api2_java.jar PATHS \"\${WRAPPER_INSTALL_DIR}/bin\" NO_DEFAULT_PATH )
IF( EXAMPLES_CIRCLE ) 
	EXECUTE_PROCESS(
		COMMAND \"${CMAKE_COMMAND}\" -E copy_directory \"\${EXAMPLES_INSTALL_DIR}/bin\" \"${CMAKE_CURRENT_BINARY_DIR}/install/bin\"
		COMMAND \"${CMAKE_COMMAND}\" -E copy_directory \"\${EXAMPLES_INSTALL_DIR}/src/c++\" \"${CMAKE_CURRENT_BINARY_DIR}/install/examples/c++\"
		COMMAND \"${CMAKE_COMMAND}\" -E copy_directory \"\${EXAMPLES_INSTALL_DIR}/src/c\" \"${CMAKE_CURRENT_BINARY_DIR}/install/examples/c\"
	)
ELSE()
	MESSAGE( FATAL_ERROR \"Missing examples\" )
ENDIF()

IF( MATLAB_DIR )
	EXECUTE_PROCESS(
		COMMAND \"${CMAKE_COMMAND}\" -E copy_directory \"\${MATLAB_DIR}\" \"${CMAKE_CURRENT_BINARY_DIR}/install/matlab\"
	)
	EXECUTE_PROCESS(
		COMMAND \"${CMAKE_COMMAND}\" -E remove_directory \"${CMAKE_CURRENT_BINARY_DIR}/install/matlab/.svn\"
	)
ELSE()
	MESSAGE( FATAL_ERROR \"Missing matlab\" )
ENDIF()

IF( DOTNET_WRAPPER_DLL AND JAVA_WRAPPER_DLL ) 
	EXECUTE_PROCESS(
		COMMAND \"${CMAKE_COMMAND}\" -E copy_directory \"\${WRAPPER_INSTALL_DIR}/bin\" \"${CMAKE_CURRENT_BINARY_DIR}/install/bin\"
		COMMAND \"${CMAKE_COMMAND}\" -E copy_directory \"\${WRAPPER_INSTALL_DIR}/examples\" \"${CMAKE_CURRENT_BINARY_DIR}/install/examples\"
	)
ELSE()
	MESSAGE( WARNING \"No wrapper\" )
ENDIF()

EXECUTE_PROCESS(
		COMMAND \"${INNOSETUP_COMPILER}\" \"/cc\" \"${CMAKE_CURRENT_BINARY_DIR}/robotino-api2.iss\"
	)
	")
	
ENDIF( INNOSETUP_FOUND )
MESSAGE("End of file")